--- a/gmailLogin/test-output/old/Default suite/methods-not-run.html
+++ b/gmailLogin/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.validLogin</td></tr>
 <tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.validLoginExcel</td></tr>
+<tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.invalidPassword</td></tr>
 <tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.validLoginToYahoo</td></tr>
 <tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.invalidEmailExcel</td></tr>
 <tr><td>AutomationTrainingPrj1.gmailLogin.gmailLoginTest.invalidEmail</td></tr>
